--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-tensorflow
-numpy
-PIL
-Flask
-opencv-python
+numpy==1.22.4
+tensorflow==2.9.1
+gdown==4.4.0
+Pillow==9.1.1
+Flask==2.1.2
+opencv-python-headless==4.5.5.64
